# MEXC-OrderBook-Spot-Futures

./: CMakeLists.txt  README.md  main.cpp  raylib_setup.cpp  raylib_setup.h
Programs/: OrderBook_MEXC_Spot.cpp  OrderBook_MEXC_Spot.h  OrderBook_MEXC_USDT_Futures.cpp
resources/: RaylibColors
